# conduits

./: .gitignore  CMakeLists.txt  README.md
src/conduits/: types.h
src/conduits/config/: configurable.h  properties.cpp  properties.h
src/conduits/util/: array.h
test/util/: CMakeLists.txt  tests.cpp
test/util/src/: array_test.cpp
